--- a/templates/playlist_tracks.html.twig
+++ b/templates/playlist_tracks.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+    {{ pagination|raw }}
     <table class="table">
         <thead>
             <tr>
@@ -73,4 +74,5 @@
             {% endfor %}
         </tbody>
     </table>
+    {{ pagination|raw }}
 {% endblock %}
