--- a/templates/playlists.html.twig
+++ b/templates/playlists.html.twig
@@ -1,3 +1,3 @@
 {% for playlist in lists %}
-    <div>{{ playlist.name }} <a href="/playlists/tracks/{{ playlist.id }}">&nbsp;(tracks)</a></div>
+    <div>{{ playlist.name }} <a href="/playlists/tracks/{{ playlist.id }}/1">&nbsp;(tracks)</a></div>
 {% endfor %}
