--- a/templates/playlist_tracks_pagination.html.twig
+++ b/templates/playlist_tracks_pagination.html.twig
@@ -3,9 +3,15 @@
     <li class="page-item disabled">
       <a class="page-link" href="#" tabindex="-1">Previous</a>
     </li>
+    {% if totalCount > 0 %}
+      <li class="page-item"><a class="page-link" href="/playlists/tracks/{{ playlistId }}/{{ first }}">First</a></li>
+    {% endif %}
     {% for i in 1..totalCount %}
-      <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
+      <li class="page-item"><a class="page-link" href="/playlists/tracks/{{ playlistId }}/{{ i }}">{{ i }}</a></li>
     {% endfor %}
+    {% if totalCount > 0 %}
+      <li class="page-item"><a class="page-link" href="/playlists/tracks/{{ playlistId }}/{{ last }}">Last</a></li>
+    {% endif %}
     <li class="page-item">
       <a class="page-link" href="#">Next</a>
     </li>
